--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=proBarber
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.database.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/probarber?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=postgres
+spring.datasource.password=admin
+server.port=8080
+
+# App Properties
+#ruralFacil.app.jwtSecret=ruralFacilSecretKey
+# 1 dia
+#ruralFacil.app.jwtExpirationMs=86400000
+# 7 dias
+#ruralFacil.app.jwtRefreshExpirationMs=604800000
+#server.error.include-message=always
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
+#spring.sql.init.mode=embedded
